--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>flyo-dark-theme-trial-piece</title>
+  <meta name="viewport" content="width=device-width, intial-scale=1">
 
   <!-- google fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
